--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".detail.view.DetailActivity"
+            android:parentActivityName=".home.view.HomeActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".home.view.HomeActivity" />
+        </activity>
+        <activity android:name=".detail.view.DetailMovieActivity"></activity>
     </application>
 
 </manifest>
